# VoidCore

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  voidcore-ci.yml  windows-ci.yml  windows-release.yml
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: main.rs  theme.rs  ui.rs
crates/service/: Cargo.toml
crates/service/src/: logging.rs  main.rs  service_impl.rs  service_impl_enforce.rs  service_impl_ipc.rs  service_impl_updater.rs  vision.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
docs/: CI_SIGNING.md  IMPLEMENTATION_PLAN.md  USAGE.md  installer_acl.md
scripts/: generate-gui-icon.ps1  sign-ed25519.py
src/: main.rs
tools/installer-builder/: Cargo.toml  build.rs
tools/installer-builder/src/: main.rs
