[package]
name = "voidcore-service"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-service = "0.6"
wmi = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
ureq = "2.9"
ed25519-dalek = "2.1"
hex = "0.4"
log = "0.4"
eventlog = "0.2"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_NetworkManagement_NetManagement",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
]}

# Reuse shared crate for config types
voidcore-shared = { path = "../shared" }

[lib]
name = "service_impl"
path = "src/service_impl.rs"
crate-type = ["cdylib"]
