[package]
name = "voidcore-service"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-service = "0.6"
wmi = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
ureq = "2.9"
ed25519-dalek = "2.1"
hex = "0.4"
log = "0.4"
eventlog = "0.2"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-native"] }
ndarray = "0.17"
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_NetworkManagement_NetManagement",
    "Win32_System_Registry",
    "Win32_System_Pipes",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_RemoteDesktop",
    "Win32_Graphics_Gdi",
    "Win32_System_StationsAndDesktops",
    "Win32_System_WindowsProgramming"
]

[dependencies.voidcore-shared]
path = "../shared"